[package]
name = "aoc2020rs"
version = "0.1.0"
authors = ["maccam912 <maccam912@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
regex = { version = "1.4", features = ["pattern"] }
proptest = "0.10.1"

[profile.release]
debug = true
