[package]
name = "aoc2020rs"
version = "0.1.0"
authors = ["maccam912 <maccam912@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
regex = { version = "1.5", features = ["pattern"] }
pest = "2.3"
pest_derive = "2.1"
lazy_static = "1.4"
num = "0.4"
structopt = "0.3"
nom = "7"

[dev-dependencies]
proptest = "1.0.0"

[profile.release]
debug = true